correction contraste pour certif AA, correction js

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,5 +5,59 @@
 }
 
 body {
-    background-color: rgb(204, 32, 32);
+    font-family: Arial, sans-serif;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    background-color: rgb(71, 26, 68);
 }
+
+#title {
+    margin-top: 1.75em;
+}
+
+#session {
+    margin: 1em;
+}
+
+#cycle {
+    margin-top: 0.5em;
+    margin-bottom: 2em;
+}
+
+#timer {
+    font-size: 2em;
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+    display: flex;
+    align-items: center;
+    margin-bottom: 1em;
+    padding: 2.5em;
+    border: solid wheat 5px;
+    border-radius: 50%;
+}
+  
+
+#minutes, #secondes {
+    margin: 0 5px;
+}
+ 
+ 
+button {
+    padding: 10px 20px;
+    font-size: 1.2rem;
+    background-color: rgb(60, 0, 255);
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 5px;
+}
+  
+button:hover {
+    background-color: #00ff4c;
+}
+  
